--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class="show-desktop hide-mobile" id="nav">
                 <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
                 <li><a href="#">home</a></li>
-                <li><a href="#">github</a></li>
-                <li><a href="#">resume</a></li>
+                <li><a href="https://github.com/kitkatsim" target="_blank">github</a></li>
+                <li><a href="https://drive.google.com/open?id=1R4UodECZzrKZUUl30AdEWWAcKXVQNVQv" target="_blank">resume</a></li>
             </ul>
         </nav>
     </div>
