--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <div class="about-me">
             <h2>About Me</h2>
             <p>I'm from Malaysia! I travelled 9062 miles to the United States for university studies.
-                I'm currently an undergraduate computer science student, anticipated to graduate in May 2019 (That's this
-                year!).<br/>
+                I'm currently an undergraduate computer science student, anticipated to graduate in May 2019.<br/>
                 My interest lies in web development and software development.
-                Looking forward to job & internship opportunities in the field. </p>
+                Looking forward to any job & internship opportunities in the field! </p>
         </div>
         <div class="experience">
             <h2>Experience</h2>
