fixed top nav bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <body>
     <div class="nav">
         <nav>
+            <a href="#" class="hide-desktop">
+                <img src="images/ham.svg" alt="toggle menu" class="menu" id="menu">
+            </a>
             <ul class="show-desktop hide-mobile" id="nav">
                 <li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu"></li>
                 <li><a href="#">home</a></li>
                 <li><a href="https://github.com/kitkatsim" target="_blank">github</a></li>
-                <li><a href="https://drive.google.com/open?id=1R4UodECZzrKZUUl30AdEWWAcKXVQNVQv" target="_blank">resume</a></li>
+                <li><a href="https://drive.google.com/open?id=1R4UodECZzrKZUUl30AdEWWAcKXVQNVQv"
+                        target="_blank">resume</a></li>
             </ul>
         </nav>
     </div>
@@ -45,7 +49,7 @@
         <div class="about-me">
             <h2>About Me</h2>
             <p>I'm from Malaysia! I travelled 9062 miles to the United States for university studies.
-                I'm currently an undergraduate computer science student, anticipated to graduate in May 2019.<br/>
+                I'm currently an undergraduate computer science student, anticipated to graduate in May 2019.<br />
                 My interest lies in web development and software development.
                 Looking forward to any job & internship opportunities in the field! </p>
         </div>
@@ -56,7 +60,8 @@
                     <h3>Nebraska Environmental Trust</h3>
                     <p class="job-title">Web Developer (2018-2019)</p>
                     <ul class="work">
-                        <li>Created an online application using ASP.NET & Microsoft SQL to manage grant applications.</li>
+                        <li>Created an online application using ASP.NET & Microsoft SQL to manage grant applications.
+                        </li>
                         <li>Allow project manager and grant administrators to submit and review budget estimations and
                             disbursements.</li>
                         <li>Developed on both front-end and back-end in the online application.</li>
