fixed mobile nav bar

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         var exit = document.getElementById('exit');
 
         menu.addEventListener('click', function (e) {
-            let a = nav.classList.toggle('hide-mobile');
+            nav.classList.toggle('hide-mobile');
             e.preventDefault();
         });
         exit.addEventListener('click', function (e) {
