removed cube, added scroll prompt

--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
         </section>
     </div>
 
-    <div class="animated-cube">
-        <div class="cube">
-            <div class="top"></div>
-            <div class="right"></div>
-            <div class="bottom"></div>
-            <div class="left"></div>
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
+    <div class="scroll-prompt">
+        <svg xmlns="http://www.w3.org/2000/svg" width="90.087" height="47.728" viewBox="0 0 90.087 47.728" class="scroll">
+            <g id="iconfinder_angle-down-arrow-direction-bottom_3209391" transform="translate(-1.293 -12.44)">
+                <path id="Path_15" data-name="Path 15"
+                    d="M91.38,15.125,88.694,12.44,46.337,54.8,3.98,12.44,1.293,15.125,46.337,60.168Z"
+                    transform="translate(0 0)" fill="#fff" />
+            </g>
+        </svg>
     </div>
 
     <div class="grey-container">
