--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             disbursements.</li>
                         <li>Developed on both front-end and back-end in the online application.</li>
                     </ul>
+                    <p>Click <a href="http://demo.environmentaltrustgrants.org">here</a> for a demo of the web application</p>
                 </li>
                 <li>
                     <h3>University of Nebraska-Lincoln</h3>
