--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <div class="nav" id="navbar">
+    <div class="nav" id="navbar" style="margin-bottom: 2em;">
         <a href="#" class="hide-desktop show-mobile">
             <img src="images/ham.svg" alt="toggle menu" class="menu" id="menu">
         </a>
-        <nav class="hide-mobile" id="nav">
+        <nav class="hide-mobile">
 
             <ul class="show-desktop">
                 <li id="exit" class="exit-btn hide-desktop show-mobile"><img src="images/exit.svg" alt="exit menu"></li>
                 <li><a href="#">home</a></li>
+                <li><a href="/projects/">projects</a></li>
                 <li><a href="https://github.com/kitkatsim" target="_blank">github</a></li>
                 <li><a href="https://drive.google.com/open?id=1R4UodECZzrKZUUl30AdEWWAcKXVQNVQv"
                         target="_blank">resume</a></li>
