--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
                 <li><a href="../">home</a></li>
                 <li><a href="#">projects</a></li>
                 <li><a href="https://github.com/kitkatsim" target="_blank">github</a></li>
-                <li><a href="https://drive.google.com/open?id=1R4UodECZzrKZUUl30AdEWWAcKXVQNVQv"
+                <li><a href="https://drive.google.com/open?id=1JyPlfHgDsedBUyHynuMBNoB6-_E4KN9b"
                         target="_blank">resume</a></li>
             </ul>
         </nav>
@@ -100,6 +100,9 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+    <div class="grey-container" style="text-align: center;">
+        <h3>Under Construction...</h3>
     </div>
     <br>
     <br>
