--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="hide-desktop show-mobile">
             <img src="images/ham.svg" alt="toggle menu" class="menu" id="menu">
         </a>
-        <nav class="hide-mobile">
+        <nav class="hide-mobile" id="nav">
 
             <ul class="show-desktop">
                 <li id="exit" class="exit-btn hide-desktop show-mobile"><img src="images/exit.svg" alt="exit menu"></li>
