title bar margin

--- a/projects/index.html
+++ b/projects/index.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
     </div>
-    <section style="margin-top: 5em;">
+    <section>
         <h1 style="margin-top: 0em">Projects</h1>
     </section>
     <div class="grey-container">
