--- a/projects/index.html
+++ b/projects/index.html
@@ -46,7 +46,7 @@
     <div class="grey-container">
         <h3>Nebraska Environmental Trust grant web application</h3>
         <p>I joined a team of five to further improve and add functionalities on this existing web application.
-            Throughout my involvement with this project, I learned a lot about MVC. This projects uses view models
+            Throughout my involvement with this project, I learned a lot about MVC. The projects uses view models
             heavily as well, so I would actually consider it as MVVMC, a hybrid of the popular MVC and MVVM
             architecture.</p>
         <p>Tools & language used:</p>
