increased link clickable area, adjust nav bar

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                     <h3>Nebraska Environmental Trust</h3>
                     <p class="job-title">Web Developer (2018-2019)</p>
                     <ul class="work">
-                        <li>Develop on an existing online application using ASP.NET & Microsoft SQL to manage grant
+                        <li>Developed on an existing online application using ASP.NET & Microsoft SQL to manage grant
                             applications.
                         </li>
                         <li>Implemented features to allow project manager and grant administrators to submit and review
                             budget estimations and
                             disbursements.</li>
-                        <li>Developed on both front-end and back-end of the online application.</li>
+                        <li>Worked on both front-end and back-end of the online application.</li>
                     </ul>
                     <p>Click <a href="http://demo.environmentaltrustgrants.org" target="_blank">here</a> for a demo of
                         the web application</p>
@@ -140,10 +140,10 @@
         $(window).scroll(function () {
 
             if ($(this).scrollTop() > 0) {
-                $('.scroll-prompt').fadeOut();
+                $('.scroll-prompt').fadeOut("fast");
             }
             else {
-                $('.scroll-prompt').fadeIn();
+                $('.scroll-prompt').fadeIn("fast");
             }
         });
 
