--- a/projects/index.html
+++ b/projects/index.html
@@ -19,7 +19,15 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/projects.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148896828-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'UA-148896828-1');
+    </script>
 </head>
 
 <body>
@@ -109,34 +117,34 @@
     <br>
     <footer>
         <div class="footer-container">
-                <div class="container">
+            <div class="container">
 
-                        <h2 class="find-me">Find me on:</h2>
-                        <div class="reference">
-                            <a href="mailto:kitkatsim96@gmail.com">kitkatsim96@gmail.com</a>
-                        </div>
-                        <div class="reference">
-                            <a href="https://www.linkedin.com/in/thiam-kiat-sim/" target="_blank">
-                                <svg id="linkedin" height="67px" style="enable-background:new 0 0 67 67;" version="1.1"
-                                    viewBox="0 0 67 67" width="67px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink">
-        
-                                    <path
-                                        d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" />
-        
-                                </svg>
-                            </a>
-                        </div>
-                        <div class="reference">
-                            <a href="https://github.com/kitkatsim" target="_blank">
-                                <svg id="github" xmlns="http://www.w3.org/2000/svg" width="60px" height="60px"
-                                    viewBox="0 0 51.769 50.493">
-                                    <path id="iconfinder_mark-github_298822"
-                                        d="M25.885,0A25.886,25.886,0,0,0,17.7,50.445c1.294.237,1.766-.562,1.766-1.245,0-.616-.024-2.657-.036-4.819-7.2,1.564-8.719-3.052-8.719-3.052-1.179-2.989-2.874-3.785-2.874-3.785-2.352-1.605.178-1.574.178-1.574a5.432,5.432,0,0,1,3.967,2.667c2.31,3.956,6.06,2.812,7.533,2.149a5.534,5.534,0,0,1,1.643-3.457C15.415,36.675,9.37,34.454,9.37,24.535a10.021,10.021,0,0,1,2.662-6.947,9.324,9.324,0,0,1,.256-6.853s2.171-.7,7.119,2.654a24.5,24.5,0,0,1,12.958,0c4.939-3.352,7.113-2.654,7.113-2.654a9.285,9.285,0,0,1,.259,6.85,9.992,9.992,0,0,1,2.66,6.947c0,9.944-6.054,12.133-11.821,12.775a6.166,6.166,0,0,1,1.757,4.79c0,3.46-.035,6.25-.035,7.1,0,.689.471,1.495,1.782,1.242A25.889,25.889,0,0,0,25.885,0Z" />
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
+                <h2 class="find-me">Find me on:</h2>
+                <div class="reference">
+                    <a href="mailto:kitkatsim96@gmail.com">kitkatsim96@gmail.com</a>
+                </div>
+                <div class="reference">
+                    <a href="https://www.linkedin.com/in/thiam-kiat-sim/" target="_blank">
+                        <svg id="linkedin" height="67px" style="enable-background:new 0 0 67 67;" version="1.1"
+                            viewBox="0 0 67 67" width="67px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+
+                            <path
+                                d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" />
+
+                        </svg>
+                    </a>
+                </div>
+                <div class="reference">
+                    <a href="https://github.com/kitkatsim" target="_blank">
+                        <svg id="github" xmlns="http://www.w3.org/2000/svg" width="60px" height="60px"
+                            viewBox="0 0 51.769 50.493">
+                            <path id="iconfinder_mark-github_298822"
+                                d="M25.885,0A25.886,25.886,0,0,0,17.7,50.445c1.294.237,1.766-.562,1.766-1.245,0-.616-.024-2.657-.036-4.819-7.2,1.564-8.719-3.052-8.719-3.052-1.179-2.989-2.874-3.785-2.874-3.785-2.352-1.605.178-1.574.178-1.574a5.432,5.432,0,0,1,3.967,2.667c2.31,3.956,6.06,2.812,7.533,2.149a5.534,5.534,0,0,1,1.643-3.457C15.415,36.675,9.37,34.454,9.37,24.535a10.021,10.021,0,0,1,2.662-6.947,9.324,9.324,0,0,1,.256-6.853s2.171-.7,7.119,2.654a24.5,24.5,0,0,1,12.958,0c4.939-3.352,7.113-2.654,7.113-2.654a9.285,9.285,0,0,1,.259,6.85,9.992,9.992,0,0,1,2.66,6.947c0,9.944-6.054,12.133-11.821,12.775a6.166,6.166,0,0,1,1.757,4.79c0,3.46-.035,6.25-.035,7.1,0,.689.471,1.495,1.782,1.242A25.889,25.889,0,0,0,25.885,0Z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 
