info & css update

--- a/index.html
+++ b/index.html
@@ -73,8 +73,23 @@
             <h2>Experience</h2>
             <ul class="workplace">
                 <li>
+                    <h3>Gregoire Consulting Inc</h3>
+                    <p class="job-title">Software Development Intern (2019 Aug - Current)</p>
+                    <ul class="work">
+                        <li>Continue working on web application for Nebraska Environemental Trust.</li>
+                        <li>Responsibilities include:
+                            <ul class="work">
+                                <li>Code Review</li>
+                                <li>Feature Development</li>
+                                <li>Meeting with client</li>
+                                <li>Training Senior Design Team students</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <h3>Nebraska Environmental Trust</h3>
-                    <p class="job-title">Web Developer (2018-2019)</p>
+                    <p class="job-title">Web Developer (2018 July - 2019 May)</p>
                     <ul class="work">
                         <li>Developed on an existing online application using ASP.NET & Microsoft SQL to manage grant
                             applications.
@@ -89,7 +104,7 @@
                 </li>
                 <li>
                     <h3>University of Nebraska-Lincoln</h3>
-                    <p class="job-title">Student Teaching Assistant (2019)</p>
+                    <p class="job-title">Student Teaching Assistant (2019 Jan - May)</p>
                     <ul class="work">
                         <li>Assist and guide fellow students in computer science subject studies.</li>
                     </ul>
